--- a/website/index.css
+++ b/website/index.css
@@ -1,3 +1,41 @@
-#shift {
+#swiper {
     display: none;
+}
+
+html,
+body,
+.swiper,
+.swiper-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide.accept {
+    font-size: 4rem;
+    background-color: #0E6F2B;
+    color: #eee;
+    justify-content: end;
+}
+
+.swiper-slide.accept>div {
+    transform: translateX(-50%) rotate(90deg) translateY(-3rem);
+
+}
+
+.swiper-slide.decline {
+    font-size: 4rem;
+    background-color: #A72D2D;
+    color: #eee;
+    justify-content: end;
+}
+
+.swiper-slide.decline>div {
+    transform: translateX(50%) rotate(-90deg) translateY(-3rem);
 }
