--- a/website/index.css
+++ b/website/index.css
@@ -1,5 +1,6 @@
 #swiper {
     display: none;
+    overflow: hidden;
 }
 
 html,
@@ -15,18 +16,103 @@ body,
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #6F00B4;
+    color: #eee;
+}
+
+.swiper-slide a {
+    color: #eee;
+    text-decoration: none;
+}
+
+.swiper-slide a:hover {
+    color: #eee;
+    text-decoration: underline;
+}
+
+.shift {
+    width: 100%;
+    height: 100%;
+    padding: 20px 20px;
+    box-sizing: border-box;
+    font-size: 1.2rem;
+}
+
+.shift>div {
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.shift>div>ul {
+    list-style-type: none;
+}
+
+.shift h2 {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.shift img {
+    transform: translateY(0.35rem);
+}
+
+.shift li {
+    height: 2rem;
+}
+
+.shift footer {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.shift button {
+    padding: 0;
+    border-radius: 0.5rem;
+    color: #eee;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.shift button>span {
+    background-color: #6F00B4;
+    border-radius: 0.5rem;
+    padding: 0.4rem 0.7rem;
+}
+
+#remember {
+    border: 0.5rem solid #0E6F2B;
+    white-space: nowrap;
+}
+
+#remember:hover>span {
+    background-color: #0E6F2B;
+}
+
+#skip {
+    border: 0.5rem solid #A72D2D;
+    white-space: nowrap;
+}
+
+#skip:hover>span {
+    background-color: #A72D2D;
 }
 
 .swiper-slide.accept {
     font-size: 4rem;
     background-color: #0E6F2B;
     color: #eee;
-    justify-content: end;
+    justify-content: start;
+    white-space: nowrap;
 }
 
 .swiper-slide.accept>div {
     transform: translateX(-50%) rotate(90deg) translateY(-3rem);
-
 }
 
 .swiper-slide.decline {
@@ -34,8 +120,30 @@ body,
     background-color: #A72D2D;
     color: #eee;
     justify-content: end;
+    white-space: nowrap;
 }
 
 .swiper-slide.decline>div {
     transform: translateX(50%) rotate(-90deg) translateY(-3rem);
+}
+
+nav {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    z-index: 100;
+    padding: 0.5rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+    background-color: #8100d1;
+}
+
+nav button {
+    background-color: #444;
+    border: 0;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    cursor: pointer;
 }
