--- a/website/index.css
+++ b/website/index.css
@@ -1,3 +1,51 @@
+@font-face {
+    font-family: 'pilowlava';
+    src: URL('fonts/pilowlava/Fonts/webfonts/Pilowlava-Regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: 'spacegrotesk';
+    src: URL('fonts/space-grotesk-1.1.4/webfont/SpaceGrotesk-Regular.woff2') format('woff2');
+    src: URL('fonts/space-grotesk-1.1.4/webfont/SpaceGrotesk-Bold.woff2') format('woff2');
+    src: URL('fonts/space-grotesk-1.1.4/webfont/SpaceGrotesk-Light.woff2') format('woff2');
+    src: URL('fonts/space-grotesk-1.1.4/webfont/SpaceGrotesk-Medium.woff2') format('woff2');
+    src: URL('fonts/space-grotesk-1.1.4/webfont/SpaceGrotesk-SemiBold.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: 'space-mono';
+    src: URL('fonts/space-mono/SpaceMono-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'uncut-sans';
+    src: URL('fonts/uncut-sans/Webfonts/UncutSans-Regular.woff2') format('woff2');
+}
+
+:root {
+    --color-primary: #FF5053;
+    --color-highlight: #FEF2FF;
+    --color-accent-a: #B2AAFF;
+    --color-accent-b: #6A5FDB;
+    --color-accent-c: #29114C;
+    --color-accent-d: #261A66;
+    --color-accent-e: #190B2F;
+    --color-background: #0F000A;
+}
+
+h1,
+h2,
+h3 {
+    font-family: "spacegrotesk";
+}
+
+a,
+p,
+div,
+li {
+    font-family: "uncut-sans";
+}
+
 #swiper {
     display: none;
     overflow: hidden;
@@ -16,17 +64,17 @@ body,
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #6F00B4;
-    color: #eee;
+    background-color: var(--color-background);
+    color: var(--color-highlight);
 }
 
-.swiper-slide a {
-    color: #eee;
+a {
+    color: var(--color-highlight);
     text-decoration: none;
 }
 
-.swiper-slide a:hover {
-    color: #eee;
+a:hover {
+    color: var(--color-highlight);
     text-decoration: underline;
 }
 
@@ -36,6 +84,9 @@ body,
     padding: 20px 20px;
     box-sizing: border-box;
     font-size: 1.2rem;
+
+    background-image: url("images/blob-freeform-12_filled.svg");
+    background-position: 50% 50%;
 }
 
 .shift>div {
@@ -57,12 +108,20 @@ body,
     text-align: center;
 }
 
+.shift h2 a {
+    color: var(--color-primary);
+}
+
 .shift img {
     transform: translateY(0.35rem);
 }
 
 .shift li {
     height: 2rem;
+}
+
+.shift span {
+    color: var(--color-accent-a);
 }
 
 .shift footer {
@@ -75,13 +134,13 @@ body,
 .shift button {
     padding: 0;
     border-radius: 0.5rem;
-    color: #eee;
+    color: var(--color-highlight);
     background-color: transparent;
     cursor: pointer;
 }
 
 .shift button>span {
-    background-color: #6F00B4;
+    background-color: var(--color-background);
     border-radius: 0.5rem;
     padding: 0.4rem 0.7rem;
 }
@@ -107,7 +166,7 @@ body,
 .swiper-slide.accept {
     font-size: 4rem;
     background-color: #0E6F2B;
-    color: #eee;
+    color: var(--color-highlight);
     justify-content: start;
     white-space: nowrap;
 }
@@ -119,7 +178,7 @@ body,
 .swiper-slide.decline {
     font-size: 4rem;
     background-color: #A72D2D;
-    color: #eee;
+    color: var(--color-highlight);
     justify-content: end;
     white-space: nowrap;
 }
@@ -138,7 +197,7 @@ nav {
     justify-content: center;
     gap: 1.5rem;
 
-    background-color: #8100d1;
+    background-color: var(--color-accent-e);
 }
 
 nav button {
@@ -166,10 +225,165 @@ nav button:hover {
     right: -1.2rem;
 
     border-radius: 50%;
-    background-color: #0E6F2B;
-    border: 1px solid #eee;
-    color: #eee;
+    background-color: var(--color-accent-e);
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary);
     width: 2rem;
     aspect-ratio: 1;
 
+}
+
+#cart {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    box-sizing: border-box;
+
+    grid-template-areas:
+        "title x"
+        "list list";
+    grid-template-columns: 1fr 2rem;
+    grid-template-rows: auto 1fr;
+    gap: 0.5rem;
+
+    padding: 1rem 1rem;
+    border: 0.3rem solid var(--color-accent-e);
+    background-color: var(--color-background);
+    color: var(--color-highlight);
+}
+
+.cart_scroll {
+    grid-area: list;
+    overflow-y: scroll;
+}
+
+#cart>h2 {
+    grid-area: title;
+    margin: 0;
+    text-align: center;
+    font-size: 2rem;
+}
+
+#close_cart {
+    grid-area: x;
+    background-color: transparent;
+    border: 0;
+    color: var(--color-highlight);
+    cursor: pointer;
+    padding: 0.3rem 0.3rem;
+    font-size: 1.5rem;
+}
+
+#cart ul {
+    clear: both;
+    padding: 0;
+    list-style-type: none;
+
+    display: grid;
+    justify-content: center;
+    gap: 1rem;
+}
+
+#cart li {
+    background-color: var(--color-accent-e);
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+
+    display: grid;
+    grid-template-areas:
+        "title title trash"
+        "time location location"
+        "day angel angel";
+    grid-template-columns: 8.5rem 1fr 2rem;
+    gap: 0.2rem;
+    max-width: 50rem;
+}
+
+#cart h3 {
+    font-size: 1.5rem;
+    margin: 0 0 0.5rem 0;
+    text-align: center;
+}
+
+#cart h3 a {
+    color: var(--color-primary);
+}
+
+#cart p {
+    margin: 0;
+    color: var(--color-accent-a);
+}
+
+.cart_title {
+    grid-area: title;
+}
+
+.cart_trash {
+    grid-area: trash;
+    background-color: var(--color-accent-e);
+    background-image: url("icons/trash.svg");
+    background-repeat: no-repeat;
+    background-size: 1.2rem;
+    background-position: 50% 50%;
+    border: 1px solid var(--color-primary);
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    cursor: pointer;
+    position: relative;
+    height: 2rem;
+    width: 2rem;
+    box-sizing: border-box;
+}
+
+.cart_trash:hover {
+    background-color: var(--color-accent-d);
+}
+
+.cart_time {
+    grid-area: time;
+}
+
+.cart_day {
+    grid-area: day;
+}
+
+.cart_location {
+    grid-area: location;
+}
+
+.cart_angel {
+    grid-area: angel;
+}
+
+.cart_time::before {
+    background-image: url("icons/clock.svg");
+}
+
+.cart_day::before {
+    background-image: url("icons/calendar.svg");
+}
+
+.cart_location::before {
+    background-image: url("icons/map.svg");
+}
+
+.cart_angel::before {
+    background-image: url("icons/user.svg");
+}
+
+.cart_time::before,
+.cart_day::before,
+.cart_location::before,
+.cart_angel::before {
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 1rem;
+    width: 1.2rem;
+    display: inline-block;
+    transform: translateY(0.15rem);
 }
