--- a/website/index.css
+++ b/website/index.css
@@ -46,6 +46,32 @@ li {
     font-family: "uncut-sans";
 }
 
+label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type=checkbox] {
+    appearance: none;
+    border: 1px solid var(--color-accent-b);
+    border-radius: 0.25rem;
+    height: 1rem;
+    width: 1rem;
+    background-color: var(--color-accent-e);
+    color: var(--color-accent-a);
+}
+
+input:checked[type=checkbox] {
+    background-color: var(--color-primary);
+    border-color: var(--color-primary);
+
+    background-image: url("icons/check.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+
+}
+
 #swiper {
     display: none;
     overflow: hidden;
@@ -57,6 +83,10 @@ body,
 .swiper-wrapper {
     width: 100%;
     height: 100%;
+}
+
+body {
+    overflow: hidden;
 }
 
 .swiper-slide {
@@ -120,10 +150,6 @@ a:hover {
     height: 2rem;
 }
 
-.shift span {
-    color: var(--color-accent-a);
-}
-
 .shift footer {
     margin-top: 2rem;
     display: flex;
@@ -132,34 +158,31 @@ a:hover {
 }
 
 .shift button {
-    padding: 0;
+    padding: 0.5rem 1rem;
     border-radius: 0.5rem;
-    color: var(--color-highlight);
-    background-color: transparent;
+    background-color: var(--color-accent-e);
     cursor: pointer;
 }
 
-.shift button>span {
-    background-color: var(--color-background);
-    border-radius: 0.5rem;
-    padding: 0.4rem 0.7rem;
-}
-
 #remember {
-    border: 0.5rem solid #0E6F2B;
+    color: #0E6F2B;
+    border: 1px solid #0E6F2B;
     white-space: nowrap;
 }
 
-#remember:hover>span {
+#remember:hover {
+    color: var(--color-highlight);
     background-color: #0E6F2B;
 }
 
 #skip {
-    border: 0.5rem solid #A72D2D;
+    color: #A72D2D;
+    border: 1px solid #A72D2D;
     white-space: nowrap;
 }
 
-#skip:hover>span {
+#skip:hover {
+    color: var(--color-highlight);
     background-color: #A72D2D;
 }
 
@@ -233,7 +256,7 @@ nav button:hover {
 
 }
 
-#cart {
+.modal {
     display: none;
     width: 100%;
     height: 100%;
@@ -245,10 +268,11 @@ nav button:hover {
 
     grid-template-areas:
         "title x"
+        "subtitle empty"
         "list list";
     grid-template-columns: 1fr 2rem;
     grid-template-rows: auto 1fr;
-    gap: 0.5rem;
+    gap: 0 0.5rem;
 
     padding: 1rem 1rem;
     border: 0.3rem solid var(--color-accent-e);
@@ -256,19 +280,26 @@ nav button:hover {
     color: var(--color-highlight);
 }
 
-.cart_scroll {
+.modal-scroll {
     grid-area: list;
     overflow-y: scroll;
 }
 
-#cart>h2 {
+.modal-title {
     grid-area: title;
     margin: 0;
     text-align: center;
     font-size: 2rem;
 }
 
-#close_cart {
+.modal-sub-title {
+    grid-area: subtitle;
+    margin: 0;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.close-button {
     grid-area: x;
     background-color: transparent;
     border: 0;
@@ -386,4 +417,46 @@ nav button:hover {
     width: 1.2rem;
     display: inline-block;
     transform: translateY(0.15rem);
+}
+
+#settings h2 {
+    display: inline-block;
+}
+
+#settings section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#settings h3 {
+    color: var(--color-primary);
+    font-size: 1.5rem;
+    margin: 2rem 0 0.5rem 0;
+}
+
+.settings-checkboxes {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 0.5rem 1rem;
+}
+
+.settings-checkboxes input {
+    margin-right: 0.5rem;
+}
+
+.modal-scroll button {
+    color: var(--color-highlight);
+    background-color: var(--color-accent-e);
+    border: 1px solid var(--color-accent-b);
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+}
+
+.modal-scroll button:hover {
+    color: var(--color-accent-e);
+    background-color: var(--color-accent-a);
+    border-color: var(--color-accent-a);
 }
