--- a/website/index.css
+++ b/website/index.css
@@ -121,11 +121,17 @@ a:hover {
 
 .shift>div {
     width: 100%;
+    margin-bottom: 3.5rem;
 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 1.5rem;
+}
+
+.shift>div#no-shift {
+    display: none;
 }
 
 .shift>div>ul {
@@ -134,8 +140,10 @@ a:hover {
 }
 
 .shift h2 {
+    margin: 0;
     font-size: 2rem;
     text-align: center;
+    color: var(--color-primary);
 }
 
 .shift h2 a {
@@ -150,8 +158,17 @@ a:hover {
     height: 2rem;
 }
 
+#shift_time,
+#shift_date {
+    color: var(--color-accent-a);
+}
+
+.shift #no_shift li {
+    height: auto;
+    margin-bottom: 1rem;
+}
+
 .shift footer {
-    margin-top: 2rem;
     display: flex;
     justify-content: center;
     gap: 1rem;
@@ -218,7 +235,7 @@ nav {
     padding: 0.5rem 0;
     display: flex;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 0.5rem;
 
     background-color: var(--color-accent-e);
 }
@@ -230,10 +247,18 @@ nav button {
     padding: 0.5rem 0.5rem;
     cursor: pointer;
     position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav button:hover {
     background-color: #666;
+}
+
+nav button:has(>#bubble[style*="visibility: visible;"]) {
+    margin-right: 1rem;
 }
 
 #bubble {
@@ -271,7 +296,7 @@ nav button:hover {
         "subtitle empty"
         "list list";
     grid-template-columns: 1fr 2rem;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto 1fr;
     gap: 0 0.5rem;
 
     padding: 1rem 1rem;
@@ -283,6 +308,12 @@ nav button:hover {
 .modal-scroll {
     grid-area: list;
     overflow-y: scroll;
+
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+    justify-content: center;
+    align-content: start;
 }
 
 .modal-title {
@@ -313,10 +344,17 @@ nav button:hover {
     clear: both;
     padding: 0;
     list-style-type: none;
+    width: 100%;
 
     display: grid;
     justify-content: center;
     gap: 1rem;
+}
+
+@media (max-width: 700px) {
+    #cart ul {
+        grid-template-columns: 1fr;
+    }
 }
 
 #cart li {
@@ -444,6 +482,7 @@ nav button:hover {
 
 .settings-checkboxes input {
     margin-right: 0.5rem;
+    cursor: pointer;
 }
 
 .modal-scroll button {
@@ -459,4 +498,37 @@ nav button:hover {
     color: var(--color-accent-e);
     background-color: var(--color-accent-a);
     border-color: var(--color-accent-a);
+}
+
+.modal-scroll input[type=datetime-local] {
+    color: var(--color-highlight);
+    background-color: var(--color-accent-e);
+    border: 1px solid var(--color-accent-b);
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    outline: none;
+}
+
+.modal-scroll input:hover[type=datetime-local] {
+    border-color: var(--color-accent-a);
+}
+
+.settings-date ul {
+    margin: 0;
+    list-style-type: none;
+    padding: 0;
+}
+
+.settings-date li {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.settings-date label {
+    font-size: 1.2rem;
+    width: 3rem;
+    justify-content: left;
 }
