--- a/website/index.css
+++ b/website/index.css
@@ -52,6 +52,10 @@ label {
     align-items: center;
 }
 
+label:has(>input[type=checkbox]) {
+    cursor: pointer;
+}
+
 input[type=checkbox] {
     appearance: none;
     border: 1px solid var(--color-accent-b);
@@ -70,6 +74,15 @@ input:checked[type=checkbox] {
     background-repeat: no-repeat;
     background-size: contain;
 
+}
+
+label:hover input[type=checkbox] {
+    border-color: var(--color-accent-a);
+}
+
+label:hover input:checked[type=checkbox] {
+    background-color: #b22f31;
+    border-color: #b22f31;
 }
 
 #swiper {
@@ -311,7 +324,7 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
 
     display: flex;
     flex-wrap: wrap;
-    column-gap: 1rem;
+    column-gap: 2rem;
     justify-content: center;
     align-content: start;
 }
@@ -391,10 +404,10 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
     grid-area: title;
 }
 
-.cart_trash {
+.modal-scroll button.cart_trash {
     grid-area: trash;
     background-color: var(--color-accent-e);
-    background-image: url("icons/trash.svg");
+    background-image: url("icons/trash-red.svg");
     background-repeat: no-repeat;
     background-size: 1.2rem;
     background-position: 50% 50%;
@@ -408,8 +421,10 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
     box-sizing: border-box;
 }
 
-.cart_trash:hover {
-    background-color: var(--color-accent-d);
+.modal-scroll button.cart_trash:hover {
+    background-image: url("icons/trash.svg");
+    background-color: var(--color-primary);
+    border-color: var(--color-primary);
 }
 
 .cart_time {
@@ -482,7 +497,6 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
 
 .settings-checkboxes input {
     margin-right: 0.5rem;
-    cursor: pointer;
 }
 
 .modal-scroll button {
@@ -500,19 +514,6 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
     border-color: var(--color-accent-a);
 }
 
-.modal-scroll input[type=datetime-local] {
-    color: var(--color-highlight);
-    background-color: var(--color-accent-e);
-    border: 1px solid var(--color-accent-b);
-    border-radius: 0.5rem;
-    padding: 0.5rem 1rem;
-    outline: none;
-}
-
-.modal-scroll input:hover[type=datetime-local] {
-    border-color: var(--color-accent-a);
-}
-
 .settings-date ul {
     margin: 0;
     list-style-type: none;
@@ -523,7 +524,7 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
     display: flex;
     justify-content: left;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-bottom: 1rem;
 }
 
@@ -531,4 +532,19 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
     font-size: 1.2rem;
     width: 3rem;
     justify-content: left;
+}
+
+.modal-scroll input[type=date],
+.modal-scroll input[type=time] {
+    color: var(--color-highlight);
+    background-color: var(--color-accent-e);
+    border: 1px solid var(--color-accent-b);
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    outline: none;
+}
+
+.modal-scroll input:hover[type=date],
+.modal-scroll input:hover[type=time] {
+    border-color: var(--color-accent-a);
 }
