--- a/website/index.css
+++ b/website/index.css
@@ -121,6 +121,32 @@ a:hover {
     text-decoration: underline;
 }
 
+body button.button-green {
+    color: #0E6F2B;
+    border: 1px solid #0E6F2B;
+    white-space: nowrap;
+}
+
+body button.button-green:hover,
+body button.button-green:focus-visible {
+    color: var(--color-highlight);
+    border: 1px solid #0E6F2B;
+    background-color: #0E6F2B;
+}
+
+body button.button-red {
+    color: #A72D2D;
+    border: 1px solid #A72D2D;
+    white-space: nowrap;
+}
+
+body button.button-red:hover,
+body button.button-red:focus-visible {
+    color: var(--color-highlight);
+    border: 1px solid #A72D2D;
+    background-color: #A72D2D;
+}
+
 .shift {
     width: 100%;
     height: 100%;
@@ -192,28 +218,6 @@ a:hover {
     border-radius: 0.5rem;
     background-color: var(--color-accent-e);
     cursor: pointer;
-}
-
-#remember {
-    color: #0E6F2B;
-    border: 1px solid #0E6F2B;
-    white-space: nowrap;
-}
-
-#remember:hover {
-    color: var(--color-highlight);
-    background-color: #0E6F2B;
-}
-
-#skip {
-    color: #A72D2D;
-    border: 1px solid #A72D2D;
-    white-space: nowrap;
-}
-
-#skip:hover {
-    color: var(--color-highlight);
-    background-color: #A72D2D;
 }
 
 .swiper-slide.accept {
@@ -547,4 +551,20 @@ nav button:has(>#bubble[style*="visibility: visible;"]) {
 .modal-scroll input:hover[type=date],
 .modal-scroll input:hover[type=time] {
     border-color: var(--color-accent-a);
+}
+
+#menu .modal-scroll {
+    padding-top: 3rem;
+}
+
+.modal-scroll .button-trash {
+    background-image: url("icons/trash-red.svg");
+    background-repeat: no-repeat;
+    background-size: 1.2rem 1.2rem;
+    background-position: 0.5rem 50%;
+    padding-left: 2.2rem;
+}
+
+.modal-scroll .button-trash:hover {
+    background-image: url("icons/trash.svg");
 }
